apps/sportif/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: sports-tracking
  labels:
    app: api
    component: backend
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
